--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,91 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/scss/variables.scss";
 
 body{
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
+
+ngx-intl-tel-input {
+    .iti {
+      display: block !important;
+      .dropdown-menu.country-dropdown {
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-color: #c7cace;
+        margin-top: -1px;
+      }
+
+      .iti__country-list {
+        box-shadow: none;
+        font-size: 14px;
+        margin-left: 0;
+        width: 244px;
+        max-height: 170px;
+
+        @include sm-max {
+          width: 88.3vw;
+        }
+      }
+
+      .search-container input {
+        font-size: 14px;
+        border-bottom: 1px solid $form_bg;
+        border-radius: 0;
+        padding: 5px 10px;
+      }
+    }
+
+    .iti__flag-container.open + input {
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+    }
+
+    input {
+      border: 0;
+      background: transparent;
+      border-radius: 4px;
+      padding: 0.375rem 1.5rem 0.375rem 2.7rem;
+      height: calc(1.5em + 0.75rem + 2px);
+      color: black;
+      font-size: 14px;
+      line-height: 20px;
+      height: 40px;
+      width: 100%;
+
+      &:hover,
+      &:focus {
+        outline: none;
+        box-shadow: none;
+      }
+
+      @include md-min {
+        font-size: 18px;
+        line-height: 28.8px;
+      }
+    }
+
+    &.ng-invalid.ng-touched input {
+      border: none;
+    }
+
+    input::-webkit-input-placeholder {
+      color: white;
+    }
+
+    input:-ms-input-placeholder {
+      color:white;
+    }
+
+    input::-ms-input-placeholder {
+      color:white;
+    }
+
+    input::placeholder {
+      color: white;
+    }
+
+    // @include md-min {
+    //   margin: 0 1rem 0 0;
+    // }
+  }
