--- a/src/app/components/user-form/user-form.component.scss
+++ b/src/app/components/user-form/user-form.component.scss
@@ -8,7 +8,7 @@
   overflow-x: hidden;
 
   .desc-text {
-      position: relative;
+    position: relative;
     h1 {
       font-weight: 600;
       font-size: 32px;
@@ -32,16 +32,17 @@
     }
   }
 
-  .blue-ellipse, .red-grid{
-      position: absolute;
-      right: 0;
-      right: -25%;
-      top: -10%;
+  .blue-ellipse,
+  .red-grid {
+    position: absolute;
+    right: 0;
+    right: -25%;
+    top: -10%;
   }
 
   form {
-      position: relative;
-      text-align: center;
+    position: relative;
+    text-align: center;
     background: $form_bg;
     border-radius: 30px;
     box-shadow: 0px 4px 20px #00000029;
@@ -71,10 +72,12 @@
           height: 48px;
           font-size: 16px;
           + label {
-              position: absolute;
-              margin-left: 15px;
-              margin-top: 0.1rem;
-              transition: all 0.2s;
+            position: absolute;
+            margin-left: 15px;
+            margin-top: 0.1rem;
+            transition: all 0.2s;
+            background: $form_bg;
+            z-index: 50;
 
             transform: translateY(12px);
             transform-origin: 0 100%;
@@ -88,7 +91,7 @@
           }
 
           &:hover,
-          &:focus {
+          &:focus, &.filled {
             border: 2px solid #008cc9;
             box-shadow: none;
             + label {
@@ -97,33 +100,35 @@
               background: $form_bg;
             }
           }
-
-         
         }
         @include lg-min {
-            &.small-width {
-                width: 49%;
-            }
+          &.small-width {
+            width: 49%;
           }
+        }
       }
     }
 
-    .btn-create{
-        height: 40px;
-        width: 100%;
-        margin: auto;
-        border-radius: 4px;
-        background: $file_red;
-        color: $input_white;
-        transition: all 0.4s ease-in-out;
-      
-        &:hover,
-        &:focus {
-          background: $input_white;
-          color: $file_red;
-          border: 1px solid $file_red;
-          box-shadow: none;
-        }
+    .btn-create {
+      height: 40px;
+      width: 100%;
+      margin: auto;
+      border-radius: 4px;
+      background: $file_red;
+      color: $input_white;
+      transition: all 0.4s ease-in-out;
+
+      &:hover,
+      &:focus {
+        background: $input_white;
+        color: $file_red;
+        border: 1px solid $file_red;
+        box-shadow: none;
+      }
     }
   }
+}
+
+.error {
+  border: 1px solid $file_red !important;
 }
