--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -161,11 +161,13 @@
 
       <button (click)="saveUser()" class="btn btn-create">Save User</button>
 
-      <button routerLink="/" class="btn btn-create"> User List</button>
-
       <div *ngIf="feedbackText" class="alert alert-success">
         {{feedbackText}}
       </div>
+      
+      <button routerLink="/" class="btn btn-create my-4"> User List</button>
+
+     
     </form>
   </div>
 </div>
