--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -21,7 +21,7 @@
     <img class="red-grid" src="assets/images/red-grid.svg" alt="red grid" />
 
   
-    <form (onSubmit)="$event.preventDefault()" [formGroup]="addUserForm" class="w-100 p-3 p-lg-5">
+    <form (ngSubmit)="saveUser()" [formGroup]="addUserForm" class="w-100 p-3 p-lg-5">
       <h3>We’ll be in touch to get your trial set up.</h3>
 
       <h6>Fill Out Form</h6>
@@ -159,7 +159,7 @@
         </div>
       </div>
 
-      <button (click)="saveUser()" class="btn btn-create">Save User</button>
+      <button [disabled]=" !addUserForm.valid" type="submit" (click)="saveUser()" class="btn btn-create">Save User</button>
 
       <div *ngIf="feedbackText" class="alert alert-success">
         {{feedbackText}}
