rm disabled attr on submit btn, also modify the test file

--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -159,7 +159,7 @@
         </div>
       </div>
 
-      <button [disabled]=" !addUserForm.valid" type="submit" (click)="saveUser()" class="btn btn-create">Save User</button>
+      <button  type="submit" (click)="saveUser()" class="btn btn-create">Save User</button>
 
       <div *ngIf="feedbackText" class="alert alert-success">
         {{feedbackText}}
